--- a/style.css
+++ b/style.css
@@ -181,13 +181,12 @@ a{
     background-image: url('./img/search.png');
     background-size: cover;
 }
-
-.header__search_hover:hover{
+.header__search_active{
     background-color: #D51544;
 }
-.header__search_hover:hover .header__search{
-    transition: 0.5s;
+.header__search_active .header__search{
     background-image: url('./img/searchWhite.png');
+    background-size: cover;
 }
 
 .header__basket_text{
@@ -864,11 +863,11 @@ footer{
 
 .search__popup{
     width: 100%;
-    height: 86vh;
+    height: 89vh;
     background-color: #fff;
     padding: 20px 80px 20px 80px;
     position: absolute;
-    top: 137px;
+    top: 120px;
     z-index: 100;
     display: none;
 }
@@ -887,7 +886,109 @@ footer{
     padding-right: 20px;
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
+    border-radius: 12px;
 }
+.search__popup_wrap{
+    margin: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.search__card{
+    width: 49%;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    background-color: #f5f5f5;
+    border-radius: 12px;
+    font-family: 'Montserrat', sans-serif;
+}
+.search__card:nth-child(1){
+    margin-bottom: 15px;
+}
+.search__card:nth-child(2){
+    margin-bottom: 15px;
+}
+.search__card:nth-child(3){
+    margin-bottom: 15px;
+}
+.search__card:nth-child(4){
+    margin-bottom: 15px;
+}
+.search__card_top{
+    margin-left: 10px;
+}
+.search__card_img{
+    width: 150px;
+}
+.search__card_left{
+    display: flex;
+}
+.search__card_info{
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.search__card_name{
+    font-size: 40px;
+}
+.search__card_id{
+    font-size: 24px;
+    color: #D51544;
+}
+.search__card_buttons{
+    display: flex;
+}
+.search__card_button{
+    padding: 10px;
+    background-color: #D51544;
+    color: #fff;
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+}
+.search__card_button:nth-child(1){
+    background-color: transparent;
+    border: 1px solid #D51544;
+    color: #000;
+    margin-right: 10px;
+}
+.search__card_button:hover{
+    cursor: pointer;
+}
+.search__card_oldprice{
+    text-align: right;
+    font-size: 24px;
+    text-decoration: line-through;
+}
+.search__card_newprice{
+    font-size: 32px;
+    color: #D51544;
+}
+.search__card_right{
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.search__card_logo{
+    width: 70px;
+    height: 65px;
+    background-image: url('./img/santa.png');
+    background-size: cover;
+}
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1261,6 +1362,10 @@ footer{
         width: 20px;
         height: 17px;
     }
+
+
+
+
     .main__fill_text{
         display: none;
     }
