--- a/style.css
+++ b/style.css
@@ -868,7 +868,7 @@ footer{
     background-color: #fff;
     padding: 20px 80px 20px 80px;
     position: absolute;
-    top: 120px;
+    top: 137px;
     z-index: 100;
     display: none;
 }
@@ -1018,8 +1018,17 @@ footer{
 }
 
 
-
-
+.filtr__popup{
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 350px;
+    background-color: #000;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    display: none;
+    z-index: 200;
+}
 
 
 
@@ -1393,6 +1402,9 @@ footer{
 
 
 @media screen and (max-width:320px){
+    .popup__h1{
+        font-size: 22px;
+    }
     .popup__card_right{
         display: flex;
         flex-direction: column-reverse;
